--- a/public/style.css
+++ b/public/style.css
@@ -4,14 +4,15 @@
 }
 
 html {
-  background-color: #222;
-  color: white;
+  
 }
 
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* background: gray url("https://im6.ezgif.com/tmp/ezgif-6-69479d799145.gif");
+  background-size: 100%; */
 }
 
 td {
