--- a/public/style.css
+++ b/public/style.css
@@ -1,34 +1,45 @@
-* {
-  box-sizing: border-box;
-  font-family: 'Press Start 2P', cursive;
-}
-
-html {
-  
-}
-
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* background: gray url("https://im6.ezgif.com/tmp/ezgif-6-69479d799145.gif");
-  background-size: 100%; */
+  background: #1A1A1A;
 }
 
-td {
-  height: 50px;
-  width: 50px;
-  background-color: lightgray;
-  transition: background-color 0.5s ease;
+.welcome {
+  font-family: 'Courier New';
+  font-size: 6vw;
+  text-align: center;
+  color: #F2F2F2;
 }
 
-.red {background-color: red;}
-.orange {background-color: orange;}
-.yellow {background-color: yellow;}
-.green {background-color: green;}
-.blue {background-color: blue;}
-.indigo {background-color: indigo;}
-.violet {background-color: violet;}
-.black {background-color: black;}
-.white {background-color: white;}
-.brown {background-color: brown;}
+.sub-title {
+  line-height: 0.0em;
+  font-family: 'Courier New';
+  font-size: 3vw;
+  text-align: center;
+  color: #FF3333;
+}
+
+.button-grid-container {
+  display: grid;
+  justify-content: center;
+  grid-row-gap: 1.5vh;
+}
+
+.button-grid-item {
+  justify-self: center;
+}
+
+.welcome-btn {
+  color: #1A1A1A;
+  border-radius: 30px;
+  text-align: center;
+  width: 7em;
+  height: 2em;
+  font-size: 3vw;
+  font-family: 'Courier New';
+}
+
+.welcome-btn:hover {
+  background: #CC0000;
+  cursor: pointer;
+  color: #F2F2F2;
+}
+
