added opening component

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,14 @@
 body {
-  background: #1A1A1A;
+  /* The image used */
+  background-image: url("http://i64.tinypic.com/2d8j0pi.jpg");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .welcome {
