changed color of header text

--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ body {
   font-family: 'Courier New';
   font-size: 3vw;
   text-align: center;
-  color: #FF3333;
+  color: White;
 }
 
 .button-grid-container {
